# internal/dto/request/bgm.go
@@ -5,3 +5,9 @@ type ListMyBgmsRequest struct {
 	PaginationRequest
 	IncludeDefault bool `form:"include_default,default=false"`
 }
+
+// BGM 作成リクエスト
+type CreateBgmRequest struct {
+	Name    string `json:"name" binding:"required,max=255"`
+	AudioID string `json:"audioId" binding:"required,uuid"`
+}
